tests/derive_compile_fail/non_scan.rs
extern crate shredder;

use shredder::Scan;

struct NotScan {}

#[derive(Scan)]
struct Test0 {
    field: NotScan
}

fn main() {}
